--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,22 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 20px 10px;
 }
-
-.App-link {
-  color: #61dafb;
+.Pictures {
+  margin: 10px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+img {
+  margin: 5px;
+}
+.Board {
+  display: flex;
+  flex: 1;
+  flex-wrap: wrap;
+  height: 90vh;
+  border: 2px solid rgb(255, 106, 47);
+  background-color: rgb(232, 206, 181);
+  align-items: flex-start;
+  justify-content: space-evenly;
+  overflow: scroll;
 }
